@@ -5,7 +5,8 @@ BASE_DIR = ../..
 include $(BASE_DIR)/include.mak
 
 TARGET_LIB = ../lib/libTools.a
-OBJS = Tools.o Screen.o
+#OBJS = Tools.o Screen.o
+OBJS = Screen.o
 
 INCDIR = 
 CFLAGS = $(GLOBAL_CFLAGS) -O2 -Wall -Werror -g -D__PSP__
